# CppTemplate_CmakeWinLinux

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Windows-gen-vs2022-solution.bat  linux-build-debug.sh  linux-build-release.sh
src/: main.cpp
